package proto_ff;

import "Com.proto";
import "ComDefine.proto";

//服务器和服务器之间的协议号定义 8000
enum ServerInternalCmd2
{
  //登录
  SERVER_INTERNAL2_BEGIN = 8000;
  LTS_LOGIN_RPC = 8001; //登陆sns
  STS_MAP_REG_RPC = 8002; //注册地图信息
  STS_ENTER_SCENE_REQ = 8003; //进入场景RPC
  STS_ENTER_SCENE_RSP = 8004; //进入场景RPC
  STS_NOTIFY_ROLE_ENTER_SERVER = 8005; //通知玩家服务器消息改变
  STS_CROSS_MAP_REG_RPC = 8006; //注册地图信息
};

